Changes for 1.5.2.1
* Disallowing new usernames for lobby if they match case insensitive an existing user, instead of checking only case sensitive. (veqryn)

* Speeding up lobby login process. (frigoref & veqryn)

* More fixes for sea placement and requiresUnits placement. (veqryn)

* Prevented units with "requiresUnits" from being placed by territories not containing the required units, and also prevented them from being moved around by the "free-up-space" methods. (veqryn)

* Fixed many small rare bugs in AbstractPlaceDelegate. (veqryn)

* Changing look of main screen, and adding tool tips for all buttons. (veqryn)

* Fixed possible Null Pointer error for maps with a production frontier of null rules. (veqryn)

* Fixed possible IllegalStateException in Air Battles. (veqryn)

* Allowed "Edit Moving" of units not owned by you, to create a battle by the unit's owner. (veqryn)

* Fixed 'uses' for 'when' based triggers to be used up right after they are used, while triggers without when set get 'used up' at the end of each round that they are used in. (veqryn)

* Fixed Air Battle to only allow aircraft capable of intercepting into the battle, instead of also allowing infrastructure too. (veqryn)


Changes for 1.5.2
* Fixed infinite loop in getAllProducers for a sea placement. (veqryn)

* Removing BattleResults from BattleRecord until we figure out the problem (probably non Serializable) with it always causing the BattleRecordsList to be null. (veqryn) 

* Moved all AI related code to new package. (veqryn)

* Fixing the bugs introduced into the engine, and the failing unit tests due to changes in how battles were abstracted, and how they are now recorded when finished. (veqryn)

* Created new type of battle, FinishedBattle (scripted), to handle blitzed and conquered territories. (veqryn)

* Created new Rules Attachment and Condition Attachment option, "battle", which can be used to test for the presence of battles. (veqryn)
