@@ -1,4 +1,6 @@
 Changes for 1.5.2.1
+* Allowing air to end their movement over sea zones containing enemy units, if you own or will place a carrier there. (veqryn)
+
 * Disallowing new usernames for lobby if they match case insensitive an existing user, instead of checking only case sensitive. (veqryn)
 
 * Speeding up lobby login process. (frigoref & veqryn)
